Kubernetes/StaticAuth-Static_Website-Auth_Microservices_deployment/k8s/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: staticauth
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: staticauth
spec:
  replicas: 1
  selector:
    matchLabels: { app: mongo }
  template:
    metadata:
      labels: { app: mongo }
    spec:
      containers:
        - name: mongo
          image: mongo:6.0
          ports: [{containerPort: 27017}]
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      volumes:
        - name: mongo-data
          emptyDir: {} # replace with a PVC in real production
