Kubernetes/StaticAuth-Static_Website-Auth_Microservices_deployment/k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: staticauth
spec:
  replicas: 2
  selector:
    matchLabels: { app: user-service }
  template:
    metadata:
      labels: { app: user-service }
    spec:
      containers:
      - name: user-service
        image: iamyogeshjagtap/user-service:latest
        ports:
          - containerPort: 4000
        livenessProbe:
          httpGet: { path: /healthz, port: 4000 }
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet: { path: /healthz, port: 4000 }
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: staticauth
spec:
  selector:
    app: user-service
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
